<resources>
    <string name="app_name">Pokédex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pokédex</string>
    <string name="nav_header_desc">Powered by PokéAPI</string>

    <string name="kanto">Kanto (0 – 151)</string>
    <string name="johto">"Johto (151 – 251)"</string>
    <string name="hoenn">Hoenn (252 – 386)"</string>
    <string name="sinnoh">Sinnoh (387 – 493)</string>
    <string name="unova">Unova (494 – 649)</string>
    <string name="kalos">Kalos (650 – 721)</string>
    <string name="alola">Alola (722 – 802)</string>

    <string name="enter_prompt">Enter name or number</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="search">Search</string>

    <string name="pokemon_placeholder">#000 missingno.</string>
    <string name="info">Info</string>
    <string name="stats">Base Stats</string>
    <string name="moves">Moves</string>
    <string name="extra">Extra</string>
    <string name="box_placeholder">\n\n\n\n\n</string>
</resources>
