<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main"
    tools:showIn="@layout/app_bar_main">

    <EditText
        android:id="@+id/editText"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_prompt"
        android:inputType="text|textNoSuggestions"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/darkForeground"
        android:onClick="apiCall"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/previousButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/side_margin"
                    android:layout_marginLeft="@dimen/side_margin"
                    android:layout_marginTop="75dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="75dp"
                    android:layout_weight="1"
                    android:background="@color/darkForeground"
                    android:onClick="previous"
                    android:text="@string/previous"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/pkmnImage"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/missingno" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="75dp"
                    android:layout_marginEnd="@dimen/side_margin"
                    android:layout_marginRight="@dimen/side_margin"
                    android:layout_marginBottom="75dp"
                    android:layout_weight="1"
                    android:background="@color/darkForeground"
                    android:onClick="next"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/pkmnName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/darkForeground"
                android:padding="10dp"
                android:text="@string/pokemon_placeholder"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/infoLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginTop="@dimen/space_between_cards"
                android:layout_marginRight="@dimen/side_margin"
                android:background="@color/colorPrimary"
                android:padding="@dimen/box_padding"
                android:text="@string/info"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/infoBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:background="@color/darkForeground"
                android:padding="@dimen/box_padding"
                android:text="@string/box_placeholder"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/statsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginTop="@dimen/space_between_cards"
                android:layout_marginRight="@dimen/side_margin"
                android:background="@color/colorPrimary"
                android:padding="@dimen/box_padding"
                android:text="@string/stats"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statsBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:background="@color/darkForeground"
                android:padding="@dimen/box_padding"
                android:text="@string/box_placeholder"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/movesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginTop="@dimen/space_between_cards"
                android:layout_marginRight="@dimen/side_margin"
                android:background="@color/colorPrimary"
                android:padding="@dimen/box_padding"
                android:text="@string/moves"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movesBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:background="@color/darkForeground"
                android:padding="@dimen/box_padding"
                android:text="@string/box_placeholder"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>